Fixed edit button alignment error

--- a/frontend/src/metabase/components/List.css
+++ b/frontend/src/metabase/components/List.css
@@ -37,7 +37,6 @@
 
 :local(.headerButton) {
     composes: flex ml1 align-center from "style";
-    align-self: end;
     font-size: 14px;
 }
 
